[package]
name = "pontus_onyx_cli"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.readme]
workspace = true

[package.repository]
workspace = true

[dependencies]
pontus_onyx = { path = "../lib", features = ["actix_server"] }
pontus_onyx_memory_engine = { path = "../memory_engine" }

actix-web = "4.2.1"
log = "0.4.17"
rand = "0.8.5"
toml = "0.5.11"
serde = { version = "1.0.152", features = ["derive"] }
simplelog = "0.12.0"
serde_json = "1.0.91"
