[package]
name = "pontus_onyx_engine_filesystem"
description = "An engine to use with pontus_onyx crate in order to store data in File System, like hard-drive files and directories"
keywords = ["remotestorage", "database", "pontus_onyx", "pontus_onyx_engine", "file"]
categories = ["database", "database-implementations"]
documentation = "https://docs.rs/pontus_onyx/"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.readme]
workspace = true

[package.repository]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pontus_onyx = { path = "../lib" }
log = "0.4.17"
uuid = { version = "1.3.2", features = ["v4"] }
time = { version = "0.3.21", features = ["std"] }
async-trait = "0.1.68"
tempfile = "3.5.0"
toml = "0.7.3"

[dev-dependencies]
tokio = { version = "1.28.1", features = ["rt", "macros"] }
