[package]
name = "pontus_onyx"
description = "A remoteStorage server and client library"
keywords = ["remotestorage", "database", "local-first", "http", "rest"]
categories = ["database", "database-implementations", "web-programming", "wasm"]
documentation = "https://docs.rs/pontus_onyx/"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.readme]
workspace = true

[package.repository]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
rand = "0.8.5"
regex = "1.8.1"
async-trait = "0.1.68"
derivative = "2.2.0"
anyhow = "1.0.70"
time = { version = "0.3.20", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
uuid = { version = "1.3.1", features = ["v4"] }
zeroize = { version = "1.6.0", features = ["derive"] }
tokio = { version = "1.27.0", features = ["rt", "macros"] }

actix-web = { version = "4.3.1", optional = true }
futures-core = { version = "0.3.28", optional = true }
futures = { version = "0.3.28", optional = true }
serde_json = { version = "1.0.96", optional = true }
actix-http = { version = "3.3.1", optional = true }

[features]
actix_server = ["dep:actix-web", "dep:actix-http", "dep:futures-core", "dep:serde_json", "dep:futures"]
