[package]
name = "pontus_onyx_memory_engine"
description = "An engine to use with pontus_onyx crate in order to store data in Random Access Memory (R.A.M.)"
keywords = ["remotestorage", "database", "pontus_onyx", "pontus_onyx_engine"]
categories = ["database", "database-implementations"]
documentation = "https://docs.rs/pontus_onyx/"

[package.version]
workspace = true

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.readme]
workspace = true

[package.repository]
workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pontus_onyx = { path = "../lib" }
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4"] }
time = { version = "0.3.17", features = ["std"] }
async-trait = "0.1.61"
tokio = { version = "1.24.1", features = ["rt", "macros"] }
